--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Campus">
         <activity
+            android:name=".SettingsActivity"
+            android:exported="false/>
+
+      <activity
             android:name=".OnboardingActivity"
+
             android:exported="false" />
         <activity
             android:name=".MainActivity"
