--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Campus">
-
+        android:theme="@style/AppTheme">
         <activity
-            android:name=".SettingsActivity"
+            android:name=".HomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
             android:exported="false" />
 
         <activity
@@ -22,7 +24,6 @@
 
       <activity
             android:name=".OnboardingActivity"
-
             android:exported="false" />
 
         <activity
