--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,9 @@
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
-
         <activity
             android:name=".SettingsActivity"
-            android:exported="false/>
+            android:exported="false" />
 
       <activity
             android:name=".OnboardingActivity"
