feat: Implement Change Password screen and functionality
This commit introduces the Change Password screen, accessible from the Settings page.

Key changes include:
- Added `ChangePasswordFragment.java` for the UI and logic of the change password functionality.
- Created `fragment_change_password.xml` for the layout of the Change Password screen.
- Updated `SettingsActivity.java` to launch `ChangePasswordFragment` when the "Change Password" item is clicked and to handle back navigation.
- Modified `activity_settings.xml` to include a `FrameLayout` container for fragments.
- Added `change_password.png` drawable for the Change Password screen.
- Set `android:windowSoftInputMode="adjustResize"` for `SettingsActivity` in `AndroidManifest.xml` to ensure the layout adjusts correctly when the keyboard is shown.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,15 +19,12 @@
             android:exported="false" />
         <activity
             android:name=".SettingsActivity"
-            android:exported="false" />
+            android:windowSoftInputMode="adjustResize" />
 
       <activity
             android:name=".OnboardingActivity"
             android:exported="false" />
 
-        <activity
-            android:name=".SettingsActivity"
-            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
