--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <!-- Permissions for sound alerts and reminders -->
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
@@ -59,6 +60,7 @@
             </intent-filter>
         </activity>
 
+
         <!-- Reminder Alert Activity -->
         <activity
             android:name=".activities.ReminderAlertActivity"
@@ -73,7 +75,14 @@
         <receiver
             android:name=".receivers.ReminderReceiver"
             android:exported="false" />
-
+        <service
+            android:name=".service.FBMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
+
 
 </manifest>
